RESOLVED FIXED85020
Allocating WeakImpl should not trigger GC, as that makes the world very tricksy.
https://bugs.webkit.org/show_bug.cgi?id=85020
Summary Allocating WeakImpl should not trigger GC, as that makes the world very tricksy.
Oliver Hunt
Reported 2012-04-26 17:44:13 PDT
Allocating WeakImpl should not trigger GC, as that makes the world very tricksy.
Attachments
Patch (2.28 KB, patch)
2012-04-26 17:46 PDT, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2012-04-26 17:46:28 PDT
Oliver Hunt
Comment 2 2012-04-26 17:50:54 PDT
Note You need to log in before you can comment on or make changes to this bug.